<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grouper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_my_groups">My Groups</string>
    <string name="title_activity_search">Search</string>
    <string name="my_group">My Group</string>
    <string name="logout">Log Out</string>
    <string name="search">Search</string>
    <string name="title_activity_edit_group">Create and Edit</string>
    <string name="create_or_edit">Please Create Or Edit Your Group Here</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="start_date">Start Date</string>
    <string name="my_groups_test">My Groups Test</string>
    <string name="connect_test">Connect Test</string>
    <string name="description">Description</string>
    <string name="edit_group_test">Edit Group Test</string>
    <string name="group_name">Group Name</string>
    <string name="search_results_test">Search Results Test</string>
    <string name="search_test">Search Test</string>
    <string name="start_time">Start Time</string>
    <string name="subject">Subject</string>
    <string name="school">School</string>
    <string name="address">Address</string>
    <string name="choose_a_school">Choose A School</string>
    <string name="change_school">Change School</string>
    <string-array name="school_arrays">
        <item>UCSD</item>
        <item>UCLA</item>
        <item>UCB</item>
        <item>UCI</item>
        <item>UCD</item>
        <item>UCSB</item>
        <item>USC</item>
        <item>UCR</item>
    </string-array>

    <string name="edit_confirm">Confirm</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string><string name="email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="title_activity_group_finder_login">Sign in</string>
    <string name="password">Password</string>
    <string name="warning">WARNING</string>
    <string name="passwordEmpty">Password cannot be empty!</string>
    <string name="emailEmpty">Email cannot be empty!</string>
    <string name="action_sign_up">Sign Up</string>

</resources>